--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="index.js"></script>
+    <link rel="stylesheet" href="index.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <h1>Rock, Paper, Scissors</h1>
+    <div class="title">Rock Paper Scissors</div>
+    <div id="results"></div>
+<button id="rockBtn" onclick="rockBtnfn()">Rock</button>
+<button id="paperBtn" onclick="paperBtnfn()">Paper</button>
+<button id="scissorsBtn" onclick="scissorsBtnfn()">Scissors</button>
+<div id="player"></div>
+<div id="computer"></div>
+<div id="winner"></div>
+
 </body>
 </html>
